--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
             문서관리
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="{% url 'sites_main' %}">고객사 현황</a>
+            <a class="dropdown-item" href="{% url 'sites_main' %}">문서 현황</a>
             <a class="dropdown-item" href="{% url 'sites_add' %}">고객사 등록</a>
             <a class="dropdown-item" href="{% url 'document_upload' %}">문서 등록</a>
           </div>
@@ -67,6 +67,16 @@
             <a class="dropdown-item" href="#">Another action</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+            aria-haspopup="true" aria-expanded="false">
+            주간업무보고
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <a class="dropdown-item" href="{% url 'weekly_main' %}">주간업무보고 현황</a>
+            <a class="dropdown-item" href="{% url 'weekly_add' %}">주간업무보고 신규 등록</a>
           </div>
         </li>
       </ul>
