Added dropdown divider

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,6 +53,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'sites_main' %}">문서 현황</a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'sites_add' %}">고객사 등록</a>
             <a class="dropdown-item" href="{% url 'document_upload' %}">문서 등록</a>
           </div>
@@ -76,6 +77,7 @@
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
             <a class="dropdown-item" href="{% url 'weekly_main' %}">주간업무보고 현황</a>
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'weekly_add' %}">주간업무보고 신규 등록</a>
           </div>
         </li>
