--- a/sites/templates/sites/document_detail.html
+++ b/sites/templates/sites/document_detail.html
@@ -4,23 +4,43 @@
     <div class="card sites">
         <div class="card-header sites__header">
             <i class="fa fa-file-text-o"></i>
-            <h5 class="card-title sites__title">&nbsp; {{project_name}} 문서 등록 현황</h5>
+            <h5 class="card-title sites__title">&nbsp; {{project_name}} 문서 현황</h5>
         </div>
         <div class="card-body">
             <p class="card-text">
-                {% for item in documents_list %}
-                <a href="/sites/document/download/{{item.id}}/">
-                    {{item.id}} ////// {{item.attach_name}} ////// {{item.attach}}<br>
-                </a>
-                {% endfor %}
+                <table class="table table-striped table-bordered table-hover assets_table " id="doument_attach">
+                    <thead>
+                        <tr>
+                            <th>파일 이름</th>
+                            <th>업로드 날짜</th>
+                            <th>파일 권한자</th>
+                        </tr>
+                    </thead>
+                    {% for item in documents_attach_list %}
+                    <tr>
+                        <td><a href="/sites/document/download/{{item.id}}/">{{item.attach_name}}</a></td>
+                        <td>{{item.created_at}}</td>
+                        <td>
+                            {% for item in item.permission %}
+                            <span class="badge badge-primary">{{item.name}}</span>
+                            {% endfor %}
+                        </td>
+                    </tr>
+                    {% endfor %}
+
+                </table>
             </p>
         </div>
     </div>
 </div>
 
-{% endblock %} {% block title %} 문서등록 현황 {% endblock %}
+{% endblock %} {% block title %} {{project_name}} 문서 현황 {% endblock %}
 {% block css %}
-
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
 {% endblock %}
+
 {% block js%}
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/datatable/dataTable.js' %}"></script>
 {% endblock %}
