--- a/sites/templates/sites/document_detail.html
+++ b/sites/templates/sites/document_detail.html
@@ -4,7 +4,7 @@
     <div class="card sites">
         <div class="card-header sites__header">
             <i class="fa fa-file-text-o"></i>
-            <h5 class="card-title sites__title">&nbsp; {{project_name}} 문서 현황</h5>
+            <h5 class="card-title sites__title">&nbsp; [{{project_name}}] 문서 현황</h5>
         </div>
         <div class="card-body">
             <p class="card-text">
@@ -12,22 +12,35 @@
                     <thead>
                         <tr>
                             <th>파일 이름</th>
+                            <th>파일 업로더</th>
                             <th>업로드 날짜</th>
-                            <th>파일 권한자</th>
+                            <th>문서 형태</th>
+                            <th>참조자</th>
+                            <th>기 타</th>
                         </tr>
                     </thead>
-                    {% for item in documents_attach_list %}
+                    {% for document in documents_attach_list %}
                     <tr>
-                        <td><a href="/sites/document/download/{{item.id}}/">{{item.attach_name}}</a></td>
-                        <td>{{item.created_at}}</td>
+                        <td><a
+                                href="{% url 'document_attach_detail' attachment_id=document.id %}">{{document.attach_name}}</a>
+                        </td>
+                        <td>{{document.member}}</td>
+                        <td>{{document.created_at}}</td>
+                        <td>{{document.kind}}</td>
                         <td>
-                            {% for item in item.permission %}
-                            <span class="badge badge-primary">{{item.name}}</span>
+                            {% for permission in document.permission %}
+                            <span class="badge badge-primary">{{permission.name}}&nbsp;</span>
                             {% endfor %}
+                        </td>
+                        <td>
+                            <button type="button" class="btn btn-outline-dark"
+                                onclick="location.href='{% url 'document_download' pk=document.id %}'"
+                                {% for permission in document.permission %}
+                                {% if request.session.id in permission.value %} disabled
+                                {% endif %}{% endfor %}>다운로드</button>
                         </td>
                     </tr>
                     {% endfor %}
-
                 </table>
             </p>
         </div>
