--- a/weekly/templates/weekly/weekly_report_detail.html
+++ b/weekly/templates/weekly/weekly_report_detail.html
@@ -3,7 +3,8 @@
     <div class="card weekly">
         <div class="card-header weekly__header">
             <i class="fa fa-external-link"></i>
-            <h5 class="card-title weekly__title">&nbsp; {{report.client_name}} 주간업무보고 추가 및 상세정보
+            <h5 class="card-title weekly__title">&nbsp; [{{report.client_name}}] 주간업무보고 추가 및 상세정보<br>
+                &nbsp;&nbsp;<span class="badge badge-primary">{{reporter.name}} {{reporter.rank}} </span>
             </h5>
         </div>
         <div class="card-body">
@@ -17,18 +18,21 @@
                         </div>
                         <div class="form-group">
                             <span>제품 선택</span>
-                            <select class="selectpicker" title="제품 선택" id="product" name="product">
+                            <select class="selectpicker" title="제품 선택" id="product" name="product"
+                                data-live-search="true">
+                                {% with current_makers='' %}
                                 {% for product in products %}
-                                {% if product.level == 0 and forloop.counter0 == 0 %}
-                                <option value="{{product.id}}">▶ {{product.name}}
-                                </option>
-                                {% elif product.level == 0 and forloop.counter0 != 0 %}
-                                <option value="{{product.id}}">▶ {{product.name}}</option>
-                                {% else %}
-                                <option value="{{product.id}}">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{product.name}}</option>
+                                {% if product.level == 0 %}
+                                {% assign_value product.makers as current_makers %}
+                                <optgroup label="{{product.makers}}">
+                                    {% endif %}
+                                    <option value="{{product.id}}" data-tokens="{{product.makers}}">{{product.name}}
+                                    </option>
+                                    {% if current_makers != product.makers %}
+                                </optgroup>
                                 {% endif %}
                                 {% endfor %}
+                                {% endwith %}
                                 <input type="hidden" value="{{report.product_id}}" name="product_id">
                             </select>
                         </div>
@@ -65,22 +69,20 @@
                     </div>
                 </div>
                 <div class="d-flex">
+                    {% if report.member_id == login_id %}
                     <div class="mr-auto p-2">
-                        {% if report.member_id == login_id %}
                         <button type="button" class="btn btn-danger" id="report_delete"
                             onclick="delete_report()">삭제</button>
-                        {% endif %}
                     </div>
                     <div class="p-2">
-                        {% if report.member_id == login_id %}
                         <button type="button" class="btn btn-outline-danger" onclick="report_add_cancel()">
                             취소
                         </button>
                         <button type="submit" class="btn btn-outline-secondary" id="submit-btn">
                             수정
                         </button>
-                        {% endif %}
                     </div>
+                    {% endif %}
                 </div>
             </form>
         </div>
