--- a/weekly/templates/weekly/weekly_detail.html
+++ b/weekly/templates/weekly/weekly_detail.html
@@ -3,7 +3,8 @@
     <div class="card weekly">
         <div class="card-header weekly__header">
             <i class="fa fa-external-link"></i>
-            <h5 class="card-title weekly__title">&nbsp; {{report.client_name}} 주간업무보고 추가 및 상세정보
+            <h5 class="card-title weekly__title">&nbsp; [{{report.client_name}}] 주간업무보고 추가 및 상세정보<br>
+                &nbsp;&nbsp;<span class="badge badge-primary">{{reporter.name}} {{reporter.rank}} </span>
             </h5>
         </div>
         <div class="card-body">
@@ -11,57 +12,65 @@
                 action="/weekly/edit/{{ report.client_id }}/">{% csrf_token %}
                 <div class="repot__contents form-row">
                     <div class="form-group col-md-12">
-                        <div class="form-group">
+                        <div class="form-group" {% if login_id != report.member_id %} style="display: none;"
+                            {% endif %}>
                             <span>제품 선택</span>
-                            <select class="selectpicker" title="제품 선택" id="product" name="product">
+                            <select class="selectpicker" title="제품 선택" id="product" name="product"
+                                data-live-search="true">
+                                {% with current_makers='' %}
                                 {% for product in products %}
-                                {% if product.level == 0 and forloop.counter0 == 0 %}
-                                <option value="{{product.id}}">▶ {{product.name}}
-                                </option>
-                                {% elif product.level == 0 and forloop.counter0 != 0 %}
-                                <option value="{{product.id}}">▶ {{product.name}}</option>
-                                {% else %}
-                                <option value="{{product.id}}">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{product.name}}</option>
+                                {% if product.level == 0 %}
+                                {% assign_value product.makers as current_makers %}
+                                <optgroup label="{{product.makers}}">
+                                    {% endif %}
+                                    <option value="{{product.id}}" data-tokens="{{product.makers}}">{{product.name}}
+                                    </option>
+                                    {% if current_makers != product.makers %}
+                                </optgroup>
                                 {% endif %}
                                 {% endfor %}
+                                {% endwith %}
                                 <input type="hidden" value="{{report.product_id}}" name="product_id">
                             </select>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" {% if login_id != report.member_id %} style="display: none;"
+                            {% endif %}>
                             <span>분 류</span>
                             {{form.sales_type}}
                             <input type="hidden" value="{{report.sales_type}}" name="sales_type_value">
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" {% if login_id != report.member_id %} style="display: none;"
+                            {% endif %}>
                             <span>지원일자</span>
                             <input type="text" name="report_date" id="report_date"
                                 class="form-control calendar__start hasDatepicker" autocomplete="off"
                                 id="asset_purchase-date" data-provide="datepicker" placeholder="&#xf073;"
-                                {% if login_id != report.member_id %}disabled{% endif %}
                                 value="{{report.support_date | date:"Y-m-d" }}">
                         </div>
-                        <div class="form-group ">
+                        <div class="form-group" {% if login_id != report.member_id %} style="display: none;"
+                            {% endif %}>
                             <span>담당자 정보</span>
                             <input class="form-control" type="text" value="{{report.client_manager}}"
                                 name="client_manager" {% if login_id != report.member_id %}disabled{% endif %}>
                         </div>
-                        <div class="form-group">
+                        <div class="form-group" {% if login_id != report.member_id %} style="display: none;"
+                            {% endif %}>
                             <span>금주 진행사항</span>
                             <textarea class="form-control col-sm-12" rows="5" id="weekly_comments"
                                 name="weekly_comments"
                                 {% if login_id != report.member_id %}disabled{% endif %}>{{report.support_comment}}</textarea>
                         </div>
 
-                        <div class="form-group">
+                        <div class="form-group" {% if login_id != report.member_id %} style="display: none;"
+                            {% endif %}>
                             <span>비 고</span>
                             <textarea class="form-control col-sm-12" rows="5" id="etc_comments" name="etc_comments"
                                 {% if login_id != report.member_id %}disabled{% endif %}>{{report.comments}}</textarea>
                         </div>
                         <div class="form-group">
                             <span>지난 진행사항</span>
-                            <textarea class="form-control col-sm-12" rows="10" id="preview_comments"
-                                name="preview_comments"
+                            <textarea class="form-control col-sm-12" {% if login_id != report.member_id %} rows="20"
+                                {% else %} rows="10" {% endif %} id="preview_comments" name="preview_comments"
                                 disabled>{% for item in report.support_items %}{{item.support_comment}} / {{item.created_at | date:"Y-m-d" }} &#13;&#10;{% endfor %}</textarea>
                         </div>
                     </div>
