--- a/sites/templates/sites/document_attach_detail.html
+++ b/sites/templates/sites/document_attach_detail.html
@@ -7,33 +7,54 @@
             <h5 class="card-title document__title">&nbsp; {{ document_attach.attach_name }} &nbsp;파일 수정페이지 </h5>
         </div>
         <div class="card-body">
-            <form class="sites__add" method="POST" name="ajaxform">
+            <form class="document__attach" method="POST" name="ajaxform"
+                action="{% url 'document_attach_detail_apply' attachment_id=document_attach.id %}">
                 {% csrf_token %}
+                <input type="hidden" value="{{ document_attach.id }}" name="document_attach-id">
+                <input type="hidden" value="{{ document.project_id }}" name="project_id">
                 <div class="sites__contents form-row">
                     <div class="form-group col-md-12">
                         <div class="form-group">
                             <label>프로젝트 명</label>
                             {{ document_form.project }}
-                            <input type="hidden" value="{{ document.project_id }}" name="project_id">
                         </div>
                         <div class="form-group">
                             <label>문서 형태 선택</label>
                             {{ document_form.kind }}
                             <input type="hidden" value="{{ document.kind }}" name="document_kind">
-                            {{ document.auth }}
+                        </div>
+                        <div class="form-group">
+                            <label>파일명</label>
+                            <input type="text" value="{{ document_attach.attach_name }}" class="form-control col-md-3"
+                                disabled>
+                        </div>
+                        <div class="form-group">
+
+                        </div>
+                        <div class="form-group">
+                            <span>파일 업로드 (첨부파일 : 1개, 각 파일은 10M 이하로 가능 / pdf, excel, ppt, word, hwp, image, zip, txt
+                                가능)</span><br>
+                            <span>파일 업로드 시 기존파일은 삭제되고 현재 업로드된 파일로 교체된다.</span>
+                            <div id="fine-uploader-manual-trigger"></div>
                         </div>
                         <div class="form-gruop">
                             <div class="member_permission"></div>
                         </div>
                     </div>
                 </div>
-                <div class="text-right submit-box">
-                    <button type="button" class="btn btn-outline-danger" onclick="document_add_cancle()">
-                        취소
-                    </button>
-                    <button type="submit" class="btn btn-outline-secondary" id="submit-btn">
-                        수정
-                    </button>
+                <div class="d-flex">
+                    <div class="mr-auto p-2">
+                        <button type="button" class="btn btn-danger" id="report_delete"
+                            onclick="document_delete()">삭제</button>
+                    </div>
+                    <div class="p-2">
+                        <button type="button" class="btn btn-outline-danger" onclick="document_modify_cancel()">
+                            취소
+                        </button>
+                        <button type="submit" class="btn btn-outline-secondary" id="submit-btn">
+                            수정
+                        </button>
+                    </div>
                 </div>
             </form>
         </div>
@@ -46,11 +67,72 @@
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
 <link rel="stylesheet" href="{% static 'css/listbox/icon_font.css' %}">
 <link rel="stylesheet" href="{% static 'css/listbox/jquery.transfer.css' %}">
+<link rel="stylesheet" href="{% static 'css/fineuploader/fine-uploader-new.css' %}">
+<link rel="stylesheet" href="{% static 'css/pages/sites_upload.css' %}">
 {% endblock %}
 
 {% block js %}
+<script type="text/template" id="qq-template-manual-trigger">
+    <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="Drop files here">
+        <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
+            <span class="qq-upload-drop-area-text-selector"></span>
+        </div>
+        <div class="buttons">
+            <div class="qq-upload-button-selector qq-upload-button">
+                <div>파일 선택</div>
+            </div>
+        </div>
+        <span class="qq-drop-processing-selector qq-drop-processing">
+            <span>Processing dropped files...</span>
+            <span class="qq-drop-processing-spinner-selector qq-drop-processing-spinner"></span>
+        </span>
+        <ul class="qq-upload-list-selector qq-upload-list" aria-live="polite" aria-relevant="additions removals">
+            <li>
+                <div class="qq-progress-bar-container-selector">
+                    <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-progress-bar-selector qq-progress-bar"></div>
+                </div>
+                <span class="qq-upload-spinner-selector qq-upload-spinner"></span>
+                <img class="qq-thumbnail-selector" qq-max-size="100" qq-server-scale>
+                <span class="qq-upload-file-selector qq-upload-file"></span>
+                <span class="qq-edit-filename-icon-selector qq-edit-filename-icon" aria-label="Edit filename"></span>
+                <input class="qq-edit-filename-selector qq-edit-filename" tabindex="0" type="text">
+                <span class="qq-upload-size-selector qq-upload-size"></span>
+                <button type="button" class="qq-btn qq-upload-cancel-selector qq-upload-cancel">Cancel</button>
+                <button type="button" class="qq-btn qq-upload-retry-selector qq-upload-retry">Retry</button>
+                <button type="button" class="qq-btn qq-upload-delete-selector qq-upload-delete">Delete</button>
+                <span role="status" class="qq-upload-status-text-selector qq-upload-status-text"></span>
+            </li>
+        </ul>
+
+        <dialog class="qq-alert-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">Close</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-confirm-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">No</button>
+                <button type="button" class="qq-ok-button-selector">Yes</button>
+            </div>
+        </dialog>
+
+        <dialog class="qq-prompt-dialog-selector">
+            <div class="qq-dialog-message-selector"></div>
+            <input type="text">
+            <div class="qq-dialog-buttons">
+                <button type="button" class="qq-cancel-button-selector">Cancel</button>
+                <button type="button" class="qq-ok-button-selector">Ok</button>
+            </div>
+        </dialog>
+    </div>
+</script>
+
 <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
-<script src="{% static 'js/sites/test.js' %}"></script>
+<script src="{% static 'js/fineuploader/jquery.fine-uploader.js' %}"></script>
+<script src="{% static 'js/sites/attach.js' %}"></script>
 <script src="{% static 'js/sites/jquery.form.js' %}"></script>
 <script src="{% static 'js/listbox/jquery.transfer.js' %}"></script>
 {% endblock %}
