--- a/sites/templates/sites/document_detail.html
+++ b/sites/templates/sites/document_detail.html
@@ -1,51 +1,64 @@
-{% extends 'base.html' %} {% block content %} {% load static %}
-
+{% extends 'base.html' %} {% block content %} {% load static %} {% load sites_tags %}
 <div class="container">
     <div class="card sites">
         <div class="card-header sites__header">
             <i class="fa fa-file-text-o"></i>
-            <h5 class="card-title sites__title">&nbsp; [{{project_name}}] 문서 현황</h5>
+            <h5 class="card-title sites__title">&nbsp; [{{project_name}}] 등록 문서 현황</h5>
         </div>
         <div class="card-body">
             <p class="card-text">
-                <table class="table table-striped table-bordered table-hover assets_table " id="doument_attach">
-                    <thead>
-                        <tr>
-                            <th>파일 이름</th>
-                            <th>파일 업로더</th>
-                            <th>업로드 날짜</th>
-                            <th>문서 형태</th>
-                            <th>참조자</th>
-                            <th>기 타</th>
-                        </tr>
-                    </thead>
-                    {% for document in documents_attach_list %}
+            <table class="table table-striped table-bordered table-hover assets_table " id="doument_attach">
+                <thead>
                     <tr>
-                        <td><a
-                                href="{% url 'document_attach_detail' attachment_id=document.id %}">{{document.attach_name}}</a>
-                        </td>
-                        <td>{{document.member}}</td>
-                        <td>{{document.created_at}}</td>
-                        <td>{{document.kind}}</td>
-                        <td>
-                            {% for permission in document.permission %}
-                            <span class="badge badge-primary">{{permission.name}}&nbsp;</span>
-                            {% endfor %}
-                        </td>
-                        <td>
-                            <button type="button" class="btn btn-outline-dark"
-                                onclick="location.href='{% url 'document_download' pk=document.id %}'"
-                                {% for permission in document.permission %}
-                                {% if request.session.id in permission.value %} disabled
-                                {% endif %}{% endfor %}>다운로드</button>
-                        </td>
+                        <th>파일 이름</th>
+                        <th>파일 업로더</th>
+                        <th>업로드 날짜</th>
+                        <th>문서 형태</th>
+                        <th>참조자</th>
+                        <th>기 타</th>
                     </tr>
-                    {% endfor %}
-                </table>
+                </thead>
+                {% for document in documents_attach_list %}
+                <tr>
+                    <td><a {% if document.member.id == login_id_type_int %}
+                            href="{% url 'document_attach_detail' attachment_id=document.id %}"
+                            {% endif %}>{{document.attach_name}}</a>
+                    </td>
+                    <td>{{document.member}}</td>
+                    <td>{{document.created_at}}</td>
+                    {% if document.kind == "PRE" %}
+                    <td>Presales</td>
+                    {% elif document.kind == "PRO" %}
+                    <td>Project Progressing</td>
+                    {% elif document.kind == "EXA" %}
+                    <td>Examination</td>
+                    {% elif document.kind == "MAN" %}
+                    <td>Maintenance</td>
+                    {% else %}
+                    <td>ETC</td>
+                    {% endif %}
+                    <td>
+                        {% for permission in document.permission %}
+                        <span class="badge badge-primary">{{permission.name}}</span>&nbsp;
+                        {% endfor %}
+                    </td>
+                    <td>
+                        {% for permission in document.permission %}
+                        {% for key, value in permission.items %}
+                        {{key}}
+                        {% endfor %}
+                        {% endfor %}
+                        <button type="button" class="btn btn-outline-dark"
+                            onclick="location.href='{% url 'document_download' pk=document.id %}'">다운로드</button>
+                    </td>
+                </tr>
+                {% endfor %}
+            </table>
             </p>
         </div>
     </div>
 </div>
+
 
 {% endblock %} {% block title %} {{project_name}} 문서 현황 {% endblock %}
 {% block css %}
