--- a/sites/templates/sites/sites_upload.html
+++ b/sites/templates/sites/sites_upload.html
@@ -22,7 +22,7 @@
                             {{ document_form.kind }}
                         </div>
                         <div class="form-group">
-                            <label>파일 업로드 (첨부파일 : 7개, 각 파일은 10M 이하로 가능 / pdf, excel, ppt, word, hwp, image, zip, txt
+                            <label>파일 업로드 (첨부파일 : 1개, 각 파일은 10M 이하로 가능 / pdf, excel, ppt, word, hwp, image, zip, txt
                                 가능)</label>
                         </div>
                         <div class="form-group">
@@ -54,14 +54,12 @@
 <link rel="stylesheet" href="{% static 'css/fineuploader/fine-uploader-new.css' %}">
 <link rel="stylesheet" href="{% static 'css/listbox/icon_font.css' %}">
 <link rel="stylesheet" href="{% static 'css/listbox/jquery.transfer.css' %}">
+<link rel="stylesheet" href="{% static 'css/pages/sites_upload.css' %}">
 {% endblock %}
 
 {% block js %}
 <script type="text/template" id="qq-template-manual-trigger">
     <div class="qq-uploader-selector qq-uploader" qq-drop-area-text="Drop files here">
-        <div class="qq-total-progress-bar-container-selector qq-total-progress-bar-container">
-            <div role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" class="qq-total-progress-bar-selector qq-progress-bar qq-total-progress-bar"></div>
-        </div>
         <div class="qq-upload-drop-area-selector qq-upload-drop-area" qq-hide-dropzone>
             <span class="qq-upload-drop-area-text-selector"></span>
         </div>
