[MODIFY] comment of fileupload and function name of cancel

--- a/sites/templates/sites/sites_upload.html
+++ b/sites/templates/sites/sites_upload.html
@@ -22,7 +22,7 @@
                             {{ document_form.kind }}
                         </div>
                         <div class="form-group">
-                            <label>파일 업로드 (첨부파일 : 1개, 각 파일은 10M 이하로 가능 / pdf, excel, ppt, word, hwp, image, zip, txt
+                            <label>파일 업로드 (첨부파일 : 7개, 각 파일은 10M 이하로 가능 / pdf, excel, ppt, word, hwp, image, zip, txt
                                 가능)</label>
                         </div>
                         <div class="form-group">
@@ -34,7 +34,7 @@
                     </div>
                 </div>
                 <div class="text-right submit-box">
-                    <button type="button" class="btn btn-outline-danger" onclick="document_add_cancle()">
+                    <button type="button" class="btn btn-outline-danger" onclick="document_upload_cancel()">
                         취소
                     </button>
                     <button type="submit" class="btn btn-outline-secondary" id="submit-btn">
