--- a/sites/templates/sites/sites_main.html
+++ b/sites/templates/sites/sites_main.html
@@ -29,55 +29,70 @@
                         </a>
                     </td>
                     <td>{{ project.product }}</td>
-                    <td>{{ project.title }}</td>
+                    <td>
+                        {% if project.document_id == None %}
+                        {{ project.title }}
 
-                    {% if project.PRE.count == 0 %}
+                        {% else %}
+                        <a
+                            href="{% url 'document_attach_kind_detail' document_id=project.document_id %}">{{ project.title }}</a>
+                        {% endif %}
+
+                    </td>
+
+                    {% if project.PRE|length == 0 %}
                     <td>-</td>
                     {% else %}
                     <td>
                         <a href="#" title="Presales 파일 리스트" data-toggle="popover_presales" data-trigger="focus"
-                            data-placement="top" id="presales_popover">
-                            File list(+{{project.PRE.count}})</a><br>
-                    </td>
-                    {% endif %}
+                            data-placement="top" id="presales_popover"
+                            data-content="{% for item in project.PRE %} <div> <a href='{% url 'document_attach_kind_detail' document_id=item.document_id %}'> {{item.title}} </a> </div> {% endfor %}">
+                            File list(+{{project.PRE|length}})</a><br </td>
+                        {% endif %}
 
-                    {% if project.PRO.count == 0 %}
+                        {% if project.PRO|length == 0 %}
                     <td>-</td>
                     {% else %}
                     <td>
                         <a href="#" title="수행계획서 파일 리스트" data-toggle="popover_presales" data-trigger="focus"
-                            data-placement="top" id="progressing_popover">
-                            File list(+{{project.PRO.count}})</a><br>
+                            data-placement="top" id="progressing_popover"
+                            data-content="{% for item in project.PRO %} <div> <a href='{% url 'document_attach_kind_detail' document_id=item.document_id %}'> {{item.title}} </a> </div> {% endfor %}">
+                            File list(+{{project.PRO|length}})</a><br>
                     </td>
                     {% endif %}
 
-                    {% if project.EXA.count == 0 %}
+                    {% if project.EXA|length == 0 %}
                     <td>-</td>
                     {% else %}
                     <td>
                         <a href="#" title="검수 파일 리스트" data-toggle="popover_presales" data-trigger="focus"
-                            data-placement="top" id="examination_popover">
-                            File list(+{{project.EXA.count}})</a><br>
+                            data-placement="top" id="examination_popover"
+                            data-content="{% for item in project.EXA %} <div> <a href='{% url 'document_attach_kind_detail' document_id=item.document_id %}'> {{item.title}} </a> </div> {% endfor %}">
+                            File list(+{{project.EXA|length}})</a><br>
+
                     </td>
                     {% endif %}
 
-                    {% if project.MAN.count == 0 %}
+                    {% if project.MAN|length == 0 %}
                     <td>-</td>
                     {% else %}
                     <td>
                         <a href="#" title="유지보수 파일 리스트" data-toggle="popover_presales" data-trigger="focus"
-                            data-placement="top" id="manafacture_popover">
-                            File list(+{{project.MAN.count}})</a><br>
+                            data-placement="top" id="manafacture_popover"
+                            data-content="{% for item in project.MAN %} <div> <a href='{% url 'document_attach_kind_detail' document_id=item.document_id %}'> {{item.title}} </a> </div> {% endfor %}">
+                            File list(+{{project.MAN|length}})</a><br>
+
                     </td>
                     {% endif %}
 
-                    {% if project.ETC.count == 0 %}
+                    {% if project.ETC|length == 0 %}
                     <td>-</td>
                     {% else %}
                     <td>
                         <a href="#" title="기타 파일 리스트" data-toggle="popover_presales" data-trigger="focus"
-                            id="etc_popover" data-placement="top">
-                            File list(+{{project.ETC.count}}) </a><br>
+                            id="etc_popover" data-placement="top"
+                            data-content="{% for item in project.ETC %} <div> <a href='{% url 'document_attach_kind_detail' document_id=item.document_id %}'> {{item.title}} </a> </div> {% endfor %}">
+                            File list(+{{project.ETC|length}}) </a><br>
                     </td>
                     {% endif %}
                 </tr>
